--- a/js.css
+++ b/js.css
@@ -22,9 +22,16 @@ input{
     
 }
 .rsp span{
-    color: gray;
+    color:rgba(49, 226, 0, 0.805);
     font-family:'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
     font-size: 20px;
+    font-weight:700;
+}
+
+span.ppp{
+    color: red;
+    font-family:'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
+    font-size: 25px;
     font-weight:700;
 }
 
